--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div class="bar">
                 <input type="range">
               </div>
-              <button class="set_budget"><img src="./images/chart.svg" alt="set_budget"></button>
+              <button class="go_set_budget"><img src="./images/chart.svg" alt="set_budget"></button>
               <div class="calced"><span>5일 동안 210,000원 남음</span></div>
             </div>
           </div>
@@ -126,7 +126,7 @@
         </section>
       </main>
       <!-- 지출관리 설정 page -->
-      <div class="setting on">
+      <div class="setting">
         <div class="header">
           <h1>지출관리</h1>
           <button class="close">닫기</button>
