pattern add class

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
               </div>
             </div>
             <ul class ="out_category">
-                <li><img src="./images/fuel.svg" alt="fuel cost"><span class="left">주유비</span><span class="right">50,000원</span></li>
-                <li><img src="./images/health.svg" alt="health care"><span class="left">건강관리비</span><span class="right">80,000원</span></li>
-                <li><img src="./images/eating_out.svg" alt="eating-out expenses"><span class="left">외식비</span><span class="right">233,000원</span></li>
-                <li><img src="./images/shopping.svg" alt="shopping"><span class="left">장보기</span><span class="right">390,000원</span></li>
-                <li><img src="./images/store.svg" alt="store"><span class="left">상점</span><span class="right">46,000원</span></li>
+                <li><img src="./images/fuel.svg" alt="fuel cost"><span class="left">주유비</span><span class="right oiling">50,000원</span></li>
+                <li><img src="./images/health.svg" alt="health care"><span class="left">건강관리비</span><span class="right health">80,000원</span></li>
+                <li><img src="./images/eating_out.svg" alt="eating-out expenses"><span class="left">외식비</span><span class="right eatout">233,000원</span></li>
+                <li><img src="./images/shopping.svg" alt="shopping"><span class="left">장보기</span><span class="right mart">390,000원</span></li>
+                <li><img src="./images/store.svg" alt="store"><span class="left">상점</span><span class="right shopping">46,000원</span></li>
             </ul>
         </section>
       </div>
