add class name for tatal fee

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="sizingpart">
               <div class ="donut_graph">
                 <canvas id="donut" class ="donut"></canvas>
-                <div><span>1,736,500</span><span>원</span></div>
+                <div><span class="total">1,736,500</span><span>원</span></div>
               </div>
             </div>
             <ul class ="out_category">
