montly pattern fixed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
         </section>
         <section class="monthly_out_pattern">
-            <h3>6월 지출패턴</h3>
+            <h3><span class="thismon">6</span>월 지출패턴</h3>
             <div class="sizingpart">
               <div class ="donut_graph">
                 <canvas id="donut" class ="donut"></canvas>
