realtime respons set value

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h3>기준금액설정</h3>
           <span>원</span>
           <div class="bar">
-            <input class="set-val" type="range" min="0" max="5000000">
+            <input class="set-val" type="range" min="0" max="5000000" step="1000">
           </div>
         </section>
         <section class="daily_report">
