feat: add swiper-no-swiping in setting page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- main 화면 -->
       <div class="swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
+          <div class="swiper-slide stop">
             <main>
               <div class="safe_area"></div>
               <!-- header -->
@@ -77,7 +77,7 @@
               </section>
             </main>
             <!-- 지출관리 설정 page -->
-            <div class="setting">
+            <div class="setting swiper-no-swiping">
               <div class="header">
                 <h1>지출관리</h1>
                 <button class="close">닫기</button>
