--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- main 화면 -->
       <div class="swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide stop">
+          <div class="swiper-slide">
             <main>
               <div class="safe_area"></div>
               <!-- header -->
